Welcome message now fixed in place #212
Move the welcome message template markup from base.html to
base_site.html so both the welcome message and the user menu link (the
"three lines" icon) will be together.  Wrapping both elements in a div
helps to keep them from going haywire at narrower screen widths.  Long
usernames were still breaking the look and feel however, so add code to
base_site.html to truncate usernames longer than 15 characters by
printing first 12 characters followed by "...".  This, along with a
slight widening of the minimum width for class container-fluid in
swoptact.css, hopefully means that no username will break look and feel
at any screen width.  This is far from a perfect solution, but there was
no ideal place to put the welcome message.  Could we possibly shrink the
size of the word "Contacts" at the top of every page?

--- a/swoptact/static/css/swoptact.css
+++ b/swoptact/static/css/swoptact.css
@@ -28,7 +28,7 @@ body {
 
 .container-fluid {
     width: 60%;
-    min-width: 450px;
+    min-width: 600px;
     max-width: 800px;
     padding: 0px;
     margin: auto;
@@ -70,11 +70,22 @@ h1, h1 a, legend {
     margin: 0px 20px 0px 0px;
 }
 
-#user-menu-link {
-    margin: 10px 0px 0px 0px;
-    position: relative;
-    cursor: pointer;
+#top-right-wrapper {
     float: right;
+    margin: 10px 0px 0px 0px;
+    vertical-align: middle;
+}
+
+#welcome-message {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+#user-menu-link {
+    cursor: pointer;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
 }
 
 #user-menu-link img {
